// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`AsciiLogo renders with version 1`] = `
"                                       ___  ____  _____ _   _
                                      / _ \\|  _ \\| ____| \\ | |
                                     | | | | |_) |  _| |  \\| |
                                     | |_| |  __/| |___| |\\  |
                                      \\___/|_|   |_____|_| \\_|

                           ____ ___  __  __ ____   ___  ____  _____ ____
                          / ___/ _ \\|  \\/  |  _ \\ / _ \\/ ___|| ____|  _ \\
                          |  | | | | |\\/| | |_) | | | \\___ \\|  _| | |_) |
                         | |__| |_| | |  | |  __/| |_| |___) | |___|  _ <
                          \\____\\___/|_|  |_|_|    \\___/|____/|_____|_| \\_\\

                                               v1.0.0"
`;

exports[`AsciiLogo renders without version 1`] = `
"                                       ___  ____  _____ _   _
                                      / _ \\|  _ \\| ____| \\ | |
                                     | | | | |_) |  _| |  \\| |
                                     | |_| |  __/| |___| |\\  |
                                      \\___/|_|   |_____|_| \\_|

                           ____ ___  __  __ ____   ___  ____  _____ ____
                          / ___/ _ \\|  \\/  |  _ \\ / _ \\/ ___|| ____|  _ \\
                          |  | | | | |\\/| | |_) | | | \\___ \\|  _| | |_) |
                         | |__| |_| | |  | |  __/| |_| |___) | |___|  _ <
                          \\____\\___/|_|  |_|_|    \\___/|____/|_____|_| \\_\\"
`;

exports[`AsciiLogo renders with custom version 1`] = `
"                                       ___  ____  _____ _   _
                                      / _ \\|  _ \\| ____| \\ | |
                                     | | | | |_) |  _| |  \\| |
                                     | |_| |  __/| |___| |\\  |
                                      \\___/|_|   |_____|_| \\_|

                           ____ ___  __  __ ____   ___  ____  _____ ____
                          / ___/ _ \\|  \\/  |  _ \\ / _ \\/ ___|| ____|  _ \\
                          |  | | | | |\\/| | |_) | | | \\___ \\|  _| | |_) |
                         | |__| |_| | |  | |  __/| |_| |___) | |___|  _ <
                          \\____\\___/|_|  |_|_|    \\___/|____/|_____|_| \\_\\

                                               v2.5.10"
`;
